--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <string name="reset_button">Reset</string>
     <string name="action_settings">Settings</string>
 
-
-
     <string name="unit_name"></string>
     <string name="unit_cost"></string>
     <string name="unit_train_time"></string>
@@ -14,7 +12,19 @@
     <string name="archer">Archer:</string>
     <string name="giant">Giant:</string>
     <string name="goblin">Goblin:</string>
+    <string name="wallbreaker">Wallbreaker:</string>
+    <string name="balloon">Balloon:</string>
+    <string name="wizard">Wizard:</string>
+    <string name="healer">Healer:</string>
+    <string name="dragon">Dragon:</string>
+    <string name="pekka">Pekka:</string>
+    <string name="minion">Minion:</string>
+    <string name="hog_rider">Hog Rider:</string>
+    <string name="valkyrie">Valkyrie:</string>
+    <string name="golem">Golem:</string>
+    <string name="witch">Witch:</string>
+    <string name="lava_hound">Lava Hound:</string>
 
     <string name="total_cost">Total Cost: </string>
-
+    <string name="total_dark_cost">Total Dark Cost: </string>
 </resources>
